# document-with-sphinx

./: LICENSE  README.md
.github/workflows/: deploy-docs.yml
sphinx-demo/: main.py  pyproject.toml
sphinx-demo/demo_code/: demo_classes.py  demo_functions.py
sphinx-demo/docs/source/: conf.py  installation.rst  markup_and_rest.rst  project_setup.rst  what_is_sphinx.rst
